--- a/jsb-17-1/index.html
+++ b/jsb-17-1/index.html
@@ -15,7 +15,7 @@
 <body class="body">
     <h2>Monaco Editor</h2>
 	<div class="editor__container"></div>
-    <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+    <script src="/jsb-17-1/node_modules/monaco-editor/min/vs/loader.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
